@@ -3,8 +3,10 @@ version 1.0-rc - XX-Apr-2011
 . [NEW] CCArray: Added exchangeObject & exchangeObjectAtIndex (issue #1085)
 . [NEW] Templates: Added Xcode4 templates for cocos2d, cocos2d+box2d, cocos2d+chipmunk both for iOS and Mac OS X
 . [NEW] Tempaltes: Possibility to run the installer from any directory
+. [NEW] Tests: Added DirectorTest
 . [NEW] TextureAtlas: added possibility to draw the quads in parts
 . [FIX] All: Removed many deprecated methods and classes that were scheduled for removal on v1.0
+. [FIX] Actions: Instant, "base" actions, Spawn and Sequence don't leak memory if actions are reused
 . [FIX] ccpLineIntersect: doesn't produce false positives for collisions (issue #962)
 . [FIX] Director: convertToUI works OK in RetinaDisplay mode
 . [FIX] Documentation: Drawing primitives fixed syntax error (issue #1127)
